--- a/client/prj.conf
+++ b/client/prj.conf
@@ -1,6 +1,19 @@
-CONFIG_LOG=y
+CONFIG_NRFX_SPI1=y
 CONFIG_SPI=y
-CONFIG_GPIO=y
+CONFIG_SOC_SERIES_NRF52X=y
+CONFIG_SOC_NRF52840_QIAA=y
+CONFIG_ARM_MPU=y
+CONFIG_ARM=y
 CONFIG_LORA=y
 CONFIG_LORA_SX12XX=y
-CONFIG_PRINTK=y
+CONFIG_CONSOLE=y
+CONFIG_UART_CONSOLE=y
+CONFIG_SERIAL=y
+CONFIG_UART_0_NRF_UART=y
+CONFIG_PWM=y
+CONFIG_PWM_1=y
+CONFIG_PWM_2=y
+CONFIG_REGULATOR=y
+CONFIG_REGULATOR_GENERIC=y
+# CONFIG_NEWLIB_LIBC_NANO is not set
+CONFIG_LOG=y
