Adjusted task priorities and disabled TX CW
TX CW was somehow blocking lora and other tasks

--- a/client/prj.conf
+++ b/client/prj.conf
@@ -38,3 +38,7 @@ CONFIG_SERIAL=y
 CONFIG_SPI_0=y
 CONFIG_GPIO=y
 CONFIG_NFCT_PINS_AS_GPIOS=y
+# RTT Debug (Yes, activate J-Link console via Segger RTT)
+CONFIG_USE_SEGGER_RTT=y
+CONFIG_RTT_CONSOLE=y
+CONFIG_UART_RTT=y
