--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -14,10 +14,10 @@ project(client)
 
 set(sources
 	src/main.c
-#	src/uart_task.c
+	src/uart_task.c
 	src/vars.c
 #	src/wdt_task.c
-#	src/sigconfig.c
+	src/sigconfig.c
 #	src/cbor.c
 #	src/coap.c
 #	src/cantcoap.c
@@ -25,17 +25,13 @@ set(sources
 	src/LoRa_task.c
 	src/led_task.c
 	src/bt_task.c
-#	src/cts.c
 	src/gatt_config_service.c
-#	src/modem-api/modem_interface_api.c
+	src/modem_binary_interface_api.c
+	src/modem_binary_interface_api_device.c
+	src/modem_ascii_interface_api.c
 )
 
 # Main app
 target_sources(app PRIVATE ${sources})
 #target_sources(app PRIVATE _sigver.c)
 
-#Modem options
-#target_sources_ifdef(CONFIG_SENSOR_POLLING_METHOD_UART_PUSH app PRIVATE src/modem-api/modem_binary_interface_api.c)
-#target_sources_ifdef(CONFIG_SENSOR_POLLING_METHOD_UART_PUSH app PRIVATE src/modem-api/modem_binary_interface_api_device.c)
-
-#target_sources_ifdef(CONFIG_SENSOR_POLLING_METHOD_UART_PUSH app PRIVATE src/modem-api/modem_ascii_interface_api.c)
