--- a/client/Kconfig
+++ b/client/Kconfig
@@ -6,6 +6,15 @@
 
 menu "Signetik Client"
 
+choice SENSOR_POLLING_METHOD_UART_FORMAT
+	bool "Sensor polling method UART format"
+	default SENSOR_POLLING_METHOD_UART_PUSH
+config SENSOR_POLLING_METHOD_UART_BINARY
+	bool "Sensor UART binary modem"
+config SENSOR_POLLING_METHOD_UART_PUSH
+	bool "Sensor UART push sensor"
+endchoice
+
 module = SIGNETIK_CLIENT
 module-dep = LOG
 module-str = Signetik Client
