--- a/client/prj.conf
+++ b/client/prj.conf
@@ -10,7 +10,7 @@ CONFIG_BT_ATT_PREPARE_COUNT=5
 CONFIG_BT_BAS=y
 CONFIG_BT_HRS=y
 CONFIG_BT_PRIVACY=y
-CONFIG_BT_DEVICE_NAME="Signetik LRN-R1"
+CONFIG_BT_DEVICE_NAME="SigLR"
 CONFIG_BT_DEVICE_APPEARANCE=833
 CONFIG_BT_DEVICE_NAME_DYNAMIC=y
 CONFIG_BT_DEVICE_NAME_MAX=65
@@ -38,7 +38,13 @@ CONFIG_SERIAL=y
 CONFIG_SPI_0=y
 CONFIG_GPIO=y
 CONFIG_NFCT_PINS_AS_GPIOS=y
+
+CONFIG_SENSOR_POLLING_METHOD_UART_BINARY=y
+CONFIG_SENSOR_POLLING_METHOD_UART_PUSH=y
+
+
 # RTT Debug (Yes, activate J-Link console via Segger RTT)
 CONFIG_USE_SEGGER_RTT=y
 CONFIG_RTT_CONSOLE=y
 CONFIG_UART_RTT=y
+
