--- a/client/prj.conf
+++ b/client/prj.conf
@@ -32,6 +32,8 @@ CONFIG_SOC_NRF52840_QIAA=y
 CONFIG_ARM_MPU=y
 CONFIG_LORA=y
 CONFIG_LORA_SX12XX=y
+CONFIG_LORAWAN=y
+CONFIG_LORAMAC_REGION_US915=y
 CONFIG_CONSOLE=y
 CONFIG_UART_CONSOLE=y
 CONFIG_SERIAL=y
