--- a/client/prj.conf
+++ b/client/prj.conf
@@ -6,15 +6,17 @@ CONFIG_BT_DEBUG_LOG=y
 CONFIG_BT_SMP=y
 CONFIG_BT_SIGNING=y
 CONFIG_BT_PERIPHERAL=y
-CONFIG_BT_DIS=y
-CONFIG_BT_ATT_PREPARE_COUNT=5
-CONFIG_BT_BAS=y
-CONFIG_BT_HRS=y
-CONFIG_BT_PRIVACY=y
 CONFIG_BT_DEVICE_NAME="SigLR"
 CONFIG_BT_DEVICE_APPEARANCE=833
 CONFIG_BT_DEVICE_NAME_DYNAMIC=y
 CONFIG_BT_DEVICE_NAME_MAX=65
+CONFIG_BT_SMP=y
+CONFIG_BT_GATT_CLIENT=y
+CONFIG_BT_GATT_DM=y
+CONFIG_BT_GATT_DM_DATA_PRINT=y
+CONFIG_BT_HCI=y
+CONFIG_BT_CTLR=y
+CONFIG_BT_LL_SW_SPLIT=y
 
 CONFIG_BT_KEYS_OVERWRITE_OLDEST=y
 CONFIG_BT_SETTINGS=y
@@ -23,9 +25,6 @@ CONFIG_FLASH_PAGE_LAYOUT=y
 CONFIG_FLASH_MAP=y
 CONFIG_NVS=y
 CONFIG_SETTINGS=y
-CONFIG_BT_HCI=y
-CONFIG_BT_CTLR=y
-CONFIG_BT_LL_SW_SPLIT=y
 
 CONFIG_SPI=y
 CONFIG_SOC_SERIES_NRF52X=y
@@ -41,6 +40,8 @@ CONFIG_SERIAL=y
 CONFIG_SPI_0=y
 CONFIG_GPIO=y
 CONFIG_NFCT_PINS_AS_GPIOS=y
+CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
+CONFIG_CLOCK_CONTROL_NRF_K32SRC_250PPM=y
 
 CONFIG_SENSOR_POLLING_METHOD_UART_BINARY=y
 CONFIG_SENSOR_POLLING_METHOD_UART_PUSH=y
