Moved WDT enable from .config to prj.config

--- a/client/prj.conf
+++ b/client/prj.conf
@@ -45,7 +45,7 @@ CONFIG_CLOCK_CONTROL_NRF_K32SRC_250PPM=y
 
 CONFIG_SENSOR_POLLING_METHOD_UART_BINARY=y
 CONFIG_SENSOR_POLLING_METHOD_UART_PUSH=y
-
+CONFIG_WATCHDOG=y
 
 # RTT Debug (Yes, activate J-Link console via Segger RTT)
 CONFIG_USE_SEGGER_RTT=y
