Add dummy test task to send a packet every 10 seconds.

--- a/client/Kconfig
+++ b/client/Kconfig
@@ -20,6 +20,8 @@ choice  SIGNETIK_APP
 	default SIGNETIK_APP_NONE
 config SIGNETIK_APP_NONE
 	bool "No custom application"
+config SIGNETIK_APP_LORATEST
+	bool "LoRa test application"
 endchoice
 
 module = SIGNETIK_CLIENT
