Change license header.

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -1,9 +1,22 @@
 # /*============================================================================*
-#  *         Copyright © 2019-2020 Signetik, LLC -- All Rights Reserved         *
+#  *         Copyright © 2019-2021 Signetik, LLC -- All Rights Reserved         *
 #  *----------------------------------------------------------------------------*
 #  *                                                              Signetik, LLC *
 #  *                                                           www.signetik.com *
-#  *                                      SPDX-License-Identifier: BSD-4-Clause *
+#  *                                          SPDX-License-Identifier: Sigentik *
+#  *                                                                            *
+#  * Customer may modify, compile, assemble and convert this source code into   *
+#  * binary object or executable code for use on Signetk products purchased     *
+#  * from Signetik or its distributors.                                         *
+#  *                                                                            *
+#  * Customer may incorporate or embed an binary executable version of the      *
+#  * software into the Customer’s product(s), which incorporate a Signetik      *
+#  * product purchased from Signetik or its distributors. Customer may          *
+#  * manufacture, brand and distribute such Customer’s product(s) worldwide to  *
+#  * its End-Users.                                                             *
+#  *                                                                            *
+#  * This agreement must be formalized with Signetik before Customer enters     *
+#  * production and/or distributes products to Customer's End-Users             *
 #  *============================================================================*/
 
 cmake_minimum_required(VERSION 3.13.1)
