Remove modem_api and SPI_0

--- a/client/prj.conf
+++ b/client/prj.conf
@@ -56,7 +56,7 @@ CONFIG_LORAMAC_REGION_US915=y
 CONFIG_CONSOLE=y
 CONFIG_UART_CONSOLE=y
 CONFIG_SERIAL=y
-CONFIG_SPI_0=y
+#CONFIG_SPI_0=y
 CONFIG_GPIO=y
 CONFIG_NFCT_PINS_AS_GPIOS=y
 CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
@@ -71,4 +71,4 @@ CONFIG_USE_SEGGER_RTT=y
 CONFIG_RTT_CONSOLE=y
 CONFIG_UART_RTT=y
 
-CONFIG_SIGNETIK_MODEM_API=y
+#CONFIG_SIGNETIK_MODEM_API=y
